--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -19,9 +19,19 @@
         <WrapPanel Margin="120,0,0,0" Orientation="Vertical" VerticalAlignment="Center" Grid.Column="2" Height="496" HorizontalAlignment="Left" Width="327">
             <Label Content="Добро пожаловать!" FontSize="30" Margin="0,0,0,60"/>
             <Label Content="Почта" FontSize="20" Margin="0,0,0,0"/>
-            <TextBox TextWrapping="Wrap" Text="Введите почту" Width="326" Opacity="0.4" Height="40" Padding="0,10,0,0" FontFamily="Actor" BorderThickness="0,0,0,1"/>
+            <Grid Margin="0,0,0,20">
+                <TextBox x:Name="textBox" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox_TextChanged" 
+                         Height="24" BorderThickness="0,0,0,1" Margin="0,6,0,0"/>
+                <TextBlock x:Name="watermark" Text="Введите почту" VerticalAlignment="Center" 
+                           Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0" RenderTransformOrigin="0.5,1.201" Height="18"/>
+            </Grid>
             <Label Content="Пароль" FontSize="20" FontFamily="Actor" Padding="5,5,5,3"/>
-            <TextBox TextWrapping="Wrap" Text="Введите пароль" Width="326" Opacity="0.4" Height="40" Padding="0,10,0,0" BorderThickness="0,0,0,1"/>
+            <Grid Margin="0,20,0,0">
+                <TextBox x:Name="textBox1" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox_TextChanged1" 
+                         Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
+                <TextBlock x:Name="watermark1" Text="Введите пароль" VerticalAlignment="Center" 
+                           Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0"/>
+            </Grid>
             <Label Content="Восстановить пароль" HorizontalAlignment="Right" FontSize="20" Margin="0,10,0,0"/>
             <Button Content="Войти" Width="317" Height="37" BorderBrush="#F96860" Margin="5" Background="#F96860" FontSize="20" Foreground="White" Click="Button_Click_1">
                 <Button.Resources>
