--- a/Desktop/Window1.xaml
+++ b/Desktop/Window1.xaml
@@ -5,46 +5,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800">
+        Title="Registration" Height="600" Width="800" MinHeight="600" MinWidth="800">
     <Grid Width="800">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="79*"/>
             <ColumnDefinition Width="61*"/>
             <ColumnDefinition Width="260*"/>
         </Grid.ColumnDefinitions>
-        <Image HorizontalAlignment="Left" Height="150"
-               Margin="67,-320,0,0"
-               VerticalAlignment="Center"
-               Width="150" Source="/logo.png" Grid.ColumnSpan="2"/>
+        <Image HorizontalAlignment="Left" Height="150" Margin="67,-320,0,0" VerticalAlignment="Center" Width="150" Source="/logo.png" Grid.ColumnSpan="2"/>
         <WrapPanel Margin="120,0,0,0" Orientation="Vertical" VerticalAlignment="Center" Grid.Column="2" Height="516" HorizontalAlignment="Left" Width="327">
             <Label Content="Welcome back" FontSize="30" Margin="0,0,0,60"/>
             <Label Content="Имя пользователя" FontSize="20" Margin="0,-40,0,0"/>
             <Grid Margin="0,20,0,0">
-                <TextBox x:Name="textBox" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox_TextChanged" 
-             Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
-                <TextBlock x:Name="watermark" Text="Введите имя пользователя" VerticalAlignment="Center" 
-                Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0"/>
+                <TextBox x:Name="textBox" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox_TextChanged" Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
+                <TextBlock x:Name="watermark" Text="Введите имя пользователя" VerticalAlignment="Center" Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0"/>
             </Grid>
             <Label Content="Ваша почта" FontSize="20" FontFamily="Actor" Padding="5,5,5,3" BorderThickness="0,0,0,1"/>
             <Grid Margin="0,20,0,0">
-                <TextBox x:Name="textBox1" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox1_TextChanged" 
-             Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
-                <TextBlock x:Name="watermark1" Text="exam@yandex" VerticalAlignment="Center" 
-               Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0"/>
+                <TextBox x:Name="textBox1" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox1_TextChanged" Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
+                <TextBlock x:Name="watermark1" Text="exam@yandex" VerticalAlignment="Center" Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0"/>
             </Grid>
             <Label Content="Пароль" FontSize="20" FontFamily="Actor" Padding="5,5,5,3"/>
             <Grid Margin="0,20,0,0">
-                <TextBox x:Name="textBox2" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox2_TextChanged" 
-             Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
-                <TextBlock x:Name="watermark2" Text="Введите пароль" VerticalAlignment="Center" 
-               Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0" Height="16"/>
+                <TextBox x:Name="textBox2" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox2_TextChanged" Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
+                <TextBlock x:Name="watermark2" Text="Введите пароль" VerticalAlignment="Center" Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0" Height="16"/>
             </Grid>
             <Label Content="Повторите пароль" FontSize="20" FontFamily="Actor" Padding="5,5,5,3"/>
             <Grid Margin="0,20,0,0">
-                <TextBox x:Name="textBox3" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox3_TextChanged" 
-             Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
-                <TextBlock x:Name="watermark3" Text="Повторите пароль" VerticalAlignment="Center" 
-               Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0" Height="16"/>
+                <TextBox x:Name="textBox3" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox3_TextChanged" Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
+                <TextBlock x:Name="watermark3" Text="Повторите пароль" VerticalAlignment="Center" Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0" Height="16"/>
             </Grid>
             <Button Content="Зарегистрироваться" Width="317" Height="37" BorderBrush="#F96860" Margin="5" Background="#F96860" FontSize="20" Foreground="White" Click="Button_Click_2">
                 <Button.Resources>
@@ -61,7 +50,6 @@
                 </Button.Resources>
             </Button>
         </WrapPanel>
-
     </Grid>
 </Window>
 
