--- a/Desktop/Window2.xaml
+++ b/Desktop/Window2.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Desktop.Main"
+﻿<Window x:Class="Desktop.Window2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Desktop"
         xmlns:utiles="clr-namespace:Desktop.Utiles"
         mc:Ignorable="d"
-        Title="Main" Height="600" Width="800" MinHeight="600" MinWidth="800">
+        Title="История" Height="600" Width="800" MinHeight="600" MinWidth="800">
     <Window.Resources>
         <utiles:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
         <Style TargetType="CheckBox">
@@ -14,12 +14,14 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="CheckBox">
                         <StackPanel Orientation="Horizontal">
-                            <Border x:Name="Circle" Width="16" Height="16" CornerRadius="8" BorderThickness="2" BorderBrush="DarkBlue" Background="Transparent" Margin="0,0,5,0" />
+                            <Border x:Name="Circle" Width="16" Height="16" CornerRadius="8" BorderThickness="2" BorderBrush="#F96860" Background="#F96860" Margin="0,0,5,0">
+                                <TextBlock x:Name="CheckMark" Text="✔️" Foreground="White" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            </Border>
                             <ContentPresenter VerticalAlignment="Center"/>
                         </StackPanel>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsChecked" Value="True">
-                                <Setter TargetName="Circle" Property="Background" Value="Black"/>
+                                <Setter TargetName="Circle" Property="Background" Value="#F96860"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -31,22 +33,24 @@
         <Image Margin="12,12,0,0" Source="/ava.png" HorizontalAlignment="Left" Width="75" Height="75" VerticalAlignment="Top" />
         <TextBox Text="{Binding Username}" HorizontalAlignment="Left" Margin="25,108,0,0" VerticalAlignment="Top" Width="94" IsReadOnly="True" BorderBrush="White" FontSize="16" />
         <Label Content="Задачи" Margin="22,162,701,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF313131" Height="30" MouseDown="ShowAllTasks_Click"/>
-        <Label Content="История" Margin="22,209,701,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF313131" Height="30" MouseDown="OpenHistoryWindow_Click" />
+        <Label Content="История" Margin="22,209,701,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF313131" Height="30" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="134,64,0,0">
-            <Label Content="Дом" FontSize="16" Foreground="#FF4BEF12" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Дом" />
-            <Label Content="Работа" FontSize="16" Foreground="#FFEF6212" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Работа" />
-            <Label Content="Учеба" FontSize="16" Foreground="#FF125DEF" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Учеба" />
-            <Label Content="Отдых" FontSize="16" Foreground="#FFAF0AFC" MouseDown="FilterByCategory_Click" Tag="Отдых" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="134,64,0,0">
+            <Label Content="Дом" FontSize="16" Foreground="#FF4BEF12" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Дом"/>
+            <Label Content="Работа" FontSize="16" Foreground="#FFEF6212" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Работа"/>
+            <Label Content="Учеба" FontSize="16" Foreground="#FF125DEF" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Учеба"/>
+            <Label Content="Отдых" FontSize="16" Foreground="#FFAF0AFC" MouseDown="FilterByCategory_Click" Tag="Отдых"/>
         </StackPanel>
         <ScrollViewer HorizontalAlignment="Left" Height="370" Margin="134,133,0,0" VerticalAlignment="Top" Width="320">
-            <ListBox ItemsSource="{Binding FilteredTaskList}" SelectedItem="{Binding SelectedTask}">
+            <ListBox ItemsSource="{Binding FilteredTaskList}" SelectionChanged="OnTaskSelected">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Margin="5">
-                            <CheckBox IsChecked="{Binding IsCompleted}" Margin="0,0,10,0" />
+                            <CheckBox IsChecked="True" Margin="0,0,10,0" />
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="{Binding Name}" Width="150" />
-                                <TextBlock Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="150"  Foreground="Gray" />
+                                <TextBlock Text="{Binding Name}" Width="150" TextDecorations="Strikethrough" Foreground="Gray"/>
+                                <TextBlock Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="150" TextDecorations="Strikethrough" Foreground="Gray"/>
                             </StackPanel>
                         </StackPanel>
                     </DataTemplate>
@@ -57,25 +61,11 @@
             <StackPanel Margin="5,7,1,7">
                 <TextBlock Text="{Binding SelectedTask.Name}" FontSize="24" FontWeight="Bold" Margin="0,0,0,10" />
                 <TextBlock Text="{Binding SelectedTask.Date, StringFormat='{}{0:HH:mm, dd MMMM yyyy}'}" FontSize="16" />
-                <TextBlock Text="{Binding SelectedTask.Description, FallbackValue='Lorem ipsum dolor sit amet, consectetur adipiscing elit.'}" FontSize="16" TextWrapping="Wrap" Margin="0,10,0,0" />
-                <Button Content="Готово" BorderBrush="#F96860" Margin="5,150,5,5" Background="#F96860" FontSize="20" Foreground="White" Click="CompleteButtonClick">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="10,10,3,3"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button Content="Удалить" BorderBrush="#F96860" Margin="5" Background="#F96860" FontSize="20" Foreground="White" Click="DeleteButtonClick">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="3,3,10,10"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                <TextBlock Text="{Binding SelectedTask.Description, FallbackValue='Описание отсутствует'}" FontSize="16" TextWrapping="Wrap" Margin="0,10,0,0" />
             </StackPanel>
         </Border>
 
-        <Button Content="+" Margin="0,491,728,0" BorderBrush="#F96860" Background="#F96860" FontSize="20" Foreground="White" Width="56" Height="56" VerticalAlignment="Top" HorizontalAlignment="Right" Click="AddTaskButton_Click">
+        <Button Content="+" Margin="0,491,728,0" BorderBrush="#F96860" Background="#F96860" FontSize="20" Foreground="White" Width="56" Height="56" VerticalAlignment="Top" HorizontalAlignment="Right" Click="Button_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="30,30,30,30" />
