--- a/Desktop/Window2.xaml
+++ b/Desktop/Window2.xaml
@@ -8,46 +8,30 @@
         mc:Ignorable="d"
         Title="История" Height="600" Width="800" MinHeight="600" MinWidth="800">
     <Window.Resources>
-        <utiles:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
-        <Style TargetType="CheckBox">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="CheckBox">
-                        <StackPanel Orientation="Horizontal">
-                            <Border x:Name="Circle" Width="16" Height="16" CornerRadius="8" BorderThickness="2" BorderBrush="#F96860" Background="#F96860" Margin="0,0,5,0">
-                                <TextBlock x:Name="CheckMark" Text="✔️" Foreground="White" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                            </Border>
-                            <ContentPresenter VerticalAlignment="Center"/>
-                        </StackPanel>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter TargetName="Circle" Property="Background" Value="#F96860"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <utiles:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+        </ResourceDictionary>
     </Window.Resources>
-    <Grid Width="800" Height="600">
-        <Image Margin="12,12,0,0" Source="/ava.png" HorizontalAlignment="Left" Width="75" Height="75" VerticalAlignment="Top" />
-        <TextBox Text="{Binding Username}" HorizontalAlignment="Left" Margin="25,108,0,0" VerticalAlignment="Top" Width="94" IsReadOnly="True" BorderBrush="White" FontSize="16" />
-        <Label Content="Задачи" Margin="22,162,701,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF313131" Height="30" MouseDown="ShowAllTasks_Click"/>
-        <Label Content="История" Margin="22,209,701,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF313131" Height="30" />
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="134,64,0,0">
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="134,64,0,0">
-            <Label Content="Дом" FontSize="16" Foreground="#FF4BEF12" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Дом"/>
-            <Label Content="Работа" FontSize="16" Foreground="#FFEF6212" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Работа"/>
-            <Label Content="Учеба" FontSize="16" Foreground="#FF125DEF" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Учеба"/>
-            <Label Content="Отдых" FontSize="16" Foreground="#FFAF0AFC" MouseDown="FilterByCategory_Click" Tag="Отдых"/>
+    <Grid Style="{StaticResource GridStyle}">
+        <Image Style="{StaticResource AvaStyle}" Source="/ava.png" />
+        <TextBox Style="{StaticResource TextBoxStyle}" Text="{Binding Username}" HorizontalAlignment="Left" Margin="25,108,0,0" VerticalAlignment="Top" Width="94" IsReadOnly="True" BorderBrush="White" />
+        <Label Style="{StaticResource LabelStyle}" Content="Задачи" Margin="22,162,0,0" VerticalAlignment="Top" MouseDown="ShowAllTasks_Click"/>
+        <Label Style="{StaticResource LabelStyle}" Content="История" Margin="22,209,0,0" VerticalAlignment="Top" />
+        <StackPanel Style="{StaticResource StackPanelStyle}" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="134,64,0,0">
+            <Label Style="{StaticResource LabelStyle}" Content="Дом" Foreground="#FF4BEF12" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Дом" VerticalAlignment="Center" Height="30" />
+            <Label Style="{StaticResource LabelStyle}" Content="Работа" Foreground="#FFEF6212" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Работа" VerticalAlignment="Center" Height="30" />
+            <Label Style="{StaticResource LabelStyle}" Content="Учеба" Foreground="#FF125DEF" Margin="0,0,10,0" MouseDown="FilterByCategory_Click" Tag="Учеба" VerticalAlignment="Center" Height="30" />
+            <Label Style="{StaticResource LabelStyle}" Content="Отдых" Foreground="#FFAF0AFC" MouseDown="FilterByCategory_Click" Tag="Отдых" VerticalAlignment="Center" Height="48" />
         </StackPanel>
         <ScrollViewer HorizontalAlignment="Left" Height="370" Margin="134,133,0,0" VerticalAlignment="Top" Width="320">
-            <ListBox ItemsSource="{Binding FilteredTaskList}" SelectionChanged="OnTaskSelected">
+            <ListBox Style="{StaticResource ListBoxStyle}" ItemsSource="{Binding FilteredTaskList}" SelectionChanged="OnTaskSelected">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Margin="5">
-                            <CheckBox IsChecked="True" Margin="0,0,10,0" />
+                            <CheckBox Style="{StaticResource CompletedCheckBoxStyle}" IsChecked="True" Margin="0,0,10,0" />
                             <StackPanel Orientation="Vertical">
                                 <TextBlock Text="{Binding Name}" Width="150" TextDecorations="Strikethrough" Foreground="Gray"/>
                                 <TextBlock Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="150" TextDecorations="Strikethrough" Foreground="Gray"/>
@@ -57,7 +41,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </ScrollViewer>
-        <Border BorderBrush="#000" BorderThickness="1" CornerRadius="1" Margin="469,133,0,0" Height="370" VerticalAlignment="Top" HorizontalAlignment="Left" Width="312" Visibility="{Binding SelectedTask, Converter={StaticResource NullToVisibilityConverter}}">
+        <Border Style="{StaticResource BorderStyle}" BorderBrush="#000" BorderThickness="1" CornerRadius="1" Margin="469,133,0,0" Height="370" VerticalAlignment="Top" HorizontalAlignment="Left" Width="312" Visibility="{Binding SelectedTask, Converter={StaticResource NullToVisibilityConverter}}">
             <StackPanel Margin="5,7,1,7">
                 <TextBlock Text="{Binding SelectedTask.Name}" FontSize="24" FontWeight="Bold" Margin="0,0,0,10" />
                 <TextBlock Text="{Binding SelectedTask.Date, StringFormat='{}{0:HH:mm, dd MMMM yyyy}'}" FontSize="16" />
@@ -65,7 +49,7 @@
             </StackPanel>
         </Border>
 
-        <Button Content="+" Margin="0,491,728,0" BorderBrush="#F96860" Background="#F96860" FontSize="20" Foreground="White" Width="56" Height="56" VerticalAlignment="Top" HorizontalAlignment="Right" Click="Button_Click">
+        <Button Style="{StaticResource ButtonStyle}" Content="+" Margin="0,480,718,0" BorderBrush="#F96860" Background="#F96860" FontSize="20" Foreground="White" Width="56" Height="56" VerticalAlignment="Top" HorizontalAlignment="Right" Click="Button_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="30,30,30,30" />
