--- a/Desktop/Main empty.xaml
+++ b/Desktop/Main empty.xaml
@@ -5,15 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="Main_empty" Height="600" Width="800" MinHeight="600" MinWidth="800">
-    <Grid>
-        <Image HorizontalAlignment="Left" Height="75" Margin="12,12,0,0" VerticalAlignment="Top" Width="75" Source="/ava.png"/>
-        <Label Content="Добро пожаловать!" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0,-10,0,0" Height="128" Width="275" Margin="-150,-270,0,0"/>
-        <Label Content="Создайте свою первую&#xD;&#xA;задачу!" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0,-10,0,0" Height="128" Width="343" Margin="-79,-150,0,0"/>
-        <Button Content="Создайте первую задачу!" Width="317" Height="37" BorderBrush="#F96860" Margin="0,100,-10,0" Background="#F96860" FontSize="20" Foreground="White" HorizontalAlignment="Center" Grid.ColumnSpan="2" VerticalAlignment="Center" Click="Button_Click">
+       Title="Main_empty" Height="600" Width="800" MinHeight="600" MinWidth="800">
+    <Window.Resources>
+        <ResourceDictionary Source="Styles.xaml" />
+    </Window.Resources>
+    <Grid Style="{StaticResource GridStyle}">
+        <Image Source="/ava.png" Style="{StaticResource AvaStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-650,-500,0,0" />
+        <Label Content="Добро пожаловать!" Style="{StaticResource HeaderLabelStyle}" Margin="-210,-330,53,55" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Label Content="Создайте свою первую&#xD;&#xA;задачу!" Style="{StaticResource HeaderLabelStyle}" Margin="-190,-200,30,55" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Button Content="Создайте первую задачу!" Style="{StaticResource ButtonStyle}" Click="Button_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="4,4,4,4"/>
+                    <Setter Property="CornerRadius" Value="10,10,10,10"/>
                 </Style>
             </Button.Resources>
         </Button>
