--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -5,35 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800">
+       Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800">
     <Grid Width="800">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="79*"/>
-            <ColumnDefinition Width="61*"/>
-            <ColumnDefinition Width="260*"/>
+            <ColumnDefinition Width="79*" />
+            <ColumnDefinition Width="61*" />
+            <ColumnDefinition Width="260*" />
         </Grid.ColumnDefinitions>
-        <Image HorizontalAlignment="Left" Height="150" Margin="67,-320,0,0" VerticalAlignment="Center" Width="150" Source="/logo.png" Grid.ColumnSpan="2"/>
+
+        <Image HorizontalAlignment="Left" Height="150" Margin="67,-320,0,0" VerticalAlignment="Center" Width="150" Source="/logo.png" Grid.ColumnSpan="2" />
+
         <WrapPanel Margin="120,0,0,0" Orientation="Vertical" VerticalAlignment="Center" Grid.Column="2" Height="496" HorizontalAlignment="Left" Width="327">
-            <Label Content="Добро пожаловать!" FontSize="30" Margin="0,0,0,60"/>
-            <Label Content="Почта" FontSize="20" Margin="0,0,0,0"/>
-            <Grid Margin="0,0,0,20">
-                <TextBox x:Name="textBox" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox_TextChanged" Height="24" BorderThickness="0,0,0,1" Margin="0,6,0,0"/>
-                <TextBlock x:Name="watermark" Text="Введите почту" VerticalAlignment="Center" Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0" RenderTransformOrigin="0.5,1.201" Height="18"/>
+
+            <Label Content="Добро пожаловать!" Style="{StaticResource HeaderLabelStyle}" />
+            <Label Content="Почта" Style="{StaticResource LabelStyle}" />
+
+            <Grid Style="{StaticResource GridStyle}">
+                <TextBox x:Name="textBox" Style="{StaticResource TextBoxStyle}" TextChanged="TextBox_TextChanged" />
+                <TextBlock x:Name="watermark" Text="Введите почту" Style="{StaticResource WatermarkStyle}" />
             </Grid>
-            <Label Content="Пароль" FontSize="20" FontFamily="Actor" Padding="5,5,5,3"/>
-            <Grid Margin="0,20,0,0">
-                <TextBox x:Name="textBox1" VerticalAlignment="Top" FontSize="14" TextChanged="TextBox_TextChanged1" Height="26" BorderThickness="0,0,0,1" Margin="0,10,0,0"/>
-                <TextBlock x:Name="watermark1" Text="Введите пароль" VerticalAlignment="Center" Foreground="Gray" IsHitTestVisible="False" Margin="5,0,0,0"/>
+
+            <Label Content="Пароль" Style="{StaticResource LabelStyle}" />
+            <Grid Style="{StaticResource GridStyle}">
+                <TextBox x:Name="textBox1" Style="{StaticResource TextBoxStyle}" TextChanged="TextBox_TextChanged1" />
+                <TextBlock x:Name="watermark1" Text="Введите пароль" Style="{StaticResource WatermarkStyle}" />
             </Grid>
-            <Label Content="Восстановить пароль" HorizontalAlignment="Right" FontSize="20" Margin="0,10,0,0"/>
-            <Button Content="Войти" Width="317" Height="37" BorderBrush="#F96860" Margin="5" Background="#F96860" FontSize="20" Foreground="White" Click="Button_Click_1">
+
+            <Label Content="Восстановить пароль" HorizontalAlignment="Right" Style="{StaticResource LabelStyle}" />
+            <Button Content="Войти" Click="Button_Click_1" Style="{StaticResource ButtonStyle}">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10,10,3,3"/>
                     </Style>
                 </Button.Resources>
             </Button>
-            <Button Content="Регистрация" Width="317" Height="37" BorderBrush="#F96860" Background="#F96860" FontSize="20" Foreground="White" Click="Button_Click">
+            <Button Content="Регистрация" Click="Button_Click" Style="{StaticResource ButtonStyle}">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="3,3,10,10"/>
